@@ -102,7 +102,7 @@ SET_HIGH_BIT = 34
 UNION_SET = (RTCM2_SET | RTCM3_SET | SUBFRAME_SET | AIS_SET | VERSION_SET |
              DEVICELIST_SET | ERROR_SET | GST_SET)
 STATUS_UNK = 0
-STATUS_FIX = 1
+STATUS_GPS = 1
 STATUS_DGPS_FIX = 2
 STATUS_RTK_FIX = 3
 STATUS_RTK_FLT = 4
