@@ -121,7 +121,7 @@ cycle (see `+processGPRMC()+` above).
 
 Handle the fix location and, if the number of received fixes is more
 than 8 and the status is differential, stash the new status as
-STATUS_DGPS_FIX; otherwise stash STATUS_FIX.
+STATUS_DGPS_FIX; otherwise stash STATUS_GPS.
 
 If the present mode is less than 2D_FIX, update it to 2D_FIX.
 
